# ephemeraldaddy

./: #troubleshooting.txt  .gitignore  EphemeralDaddy.spec  How_to_run_app_from_Terminal!.txt  LICENSE  ONBOARDING.md  README.md  __init__.py  app_refactor_suggestions.md  desktop_app.md  filesystemcreator.py  installer.iss  linux_packaging.md  nakshatra_prevalence-2026-04-04.csv  performance_bug_audit.md  pyproject.toml  redundancy_audit_2026-04-06.md  refinement_deployment_plan_2026-04-09.md  requirements-codex.txt  requirements.txt  run_ephemeraldaddy_windows.cmd  sun_sign_prevalence-2026-04-04.csv  terminal cmds  terminal cmds.txt
.github/: FUNDING.yml
ephemeraldaddy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
error logs/: 4-7-2026-another personal transit chart crash bug.txt  crash report 5-1-2026.txt  crash_report_04-29-2026.txt  crashreport-5-14-2026.txt  get transit chart crash bug report 04-07-2026.txt  personal_transit_crash_report_4-22-2026.txt  personal_transit_crashlog_04-25-2026.txt  segmentation_fault-05-09-2026.txt
examples/: sample_chart.py  utc_fallback_demo.py
flatpak/: ephemeraldaddy-launcher.sh  io.github.ephemeraldaddy.EphemeralDaddy.yml
fonts/: README.md
notes/: problems with body dynamics algorithm.txt
results/: Current_Findings.txt
tests/: test_anagram_engine.py  test_anagrams_presenter.py  test_body_dynamics_metadata.py  test_chart_provenance.py  test_chart_right_panel_state_and_tabs.py  test_chart_view_right_panel_layout_source.py  test_collections.py  test_database_analytics_axis_scaling.py  (+19 more)
(+187 files in other folders)
